# web-crawler

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: CMakeLists.txt
configs/: config.yaml
k8s/: deployment.yaml
scripts/: bench_crawl.sh  bench_search.sh  gen_data.sh  run_local.sh
src/: main.cpp
src/api/: api_server.cpp  api_server.h
src/dedup/: dedup.cpp  dedup.h
src/fetcher/: fetcher.cpp  fetcher.h
src/indexer/: indexer.cpp  indexer.h
src/observability/: logger.cpp  logger.h  metrics.cpp  metrics.h
src/parser/: parser.cpp  parser.h
src/scheduler/: scheduler.cpp  scheduler.h
src/storage/: storage.cpp  storage.h
src/utils/: config.cpp  config.h  hash_utils.cpp  hash_utils.h  url_utils.cpp  url_utils.h
tests/: CMakeLists.txt
tests/unit/: test_hash_utils.cpp  test_url_utils.cpp
